Add toggle endpoint to rest backend, add controller function with logik from Proejcts.js
